# llama-cpp-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  LLVM-MINGW-SETUP.md  README-WINDOWS-BUILD.md  README.md  WINDOWS-BUILD-QUICKSTART.md  build-windows-make.bat  build-windows-minsize.bat  main.cpp  setup-llvm-mingw.ps1
C#/: CSharpExample.cs  CSharpLinuxHelper.cs  CSharpStreamingExample.cs  LocalLLMService.cs  LocalLLMService_Examples.cs
cmake/: README.md  windows-clang-ninja-minsize.cmake
docs/: BUILD_GUIDE_WINDOWS.md  CLEANUP_SUMMARY.md
docs/Advanced/: INTEGRATION_GUIDE.md  STREAMING_IPC_GUIDE.md
docs/C# Integration/: LocalLLMService_GUIDE.md  LocalLLMService_QUICKREF.md  LocalLLMService_SUMMARY.md
docs/Core/: ARCHITECTURE.md  DOCS_INDEX.md  FEATURES.md  QUICKSTART.md
docs/windows-build/: BUILD_CONFIGURATION_SUMMARY.md  BUILD_SYSTEM_OVERVIEW.txt  FILE-LOCKING-SOLUTIONS.md  FILES.md  WINDOWS-BUILD-FIXES.md  WINDOWS-BUILD-QUICKSTART.md  WINDOWS-BUILD-REFERENCE.md
